tested reflection and added missing files from output

--- a/preparation/notebook.ipynb
+++ b/preparation/notebook.ipynb
@@ -123,11 +123,43 @@
    "source": [
     "json_data.get('ayah')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9bec67d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files missing in target folder: ['40_34.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Set your folder paths\n",
+    "source_folder = \"../data/alaloosi\"\n",
+    "target_folder = \"../data/tabari\"\n",
+    "\n",
+    "# Get files from both folders\n",
+    "source_files = set(os.listdir(source_folder))\n",
+    "target_files = set(os.listdir(target_folder))\n",
+    "\n",
+    "# Find missing files\n",
+    "missing_files = source_files - target_files\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Files missing in target folder: {list(missing_files)}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
