added QDrant implementation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9bec67d4",
    "metadata": {},
    "outputs": [
@@ -142,8 +142,8 @@
     "import os\n",
     "\n",
     "# Set your folder paths\n",
-    "source_folder = \"../data/alaloosi\"\n",
-    "target_folder = \"../data/tabari\"\n",
+    "source_folder = \"data/alaloosi\"\n",
+    "target_folder = \"data/tabari\"\n",
     "\n",
     "# Get files from both folders\n",
     "source_files = set(os.listdir(source_folder))\n",
